--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  body {
+    @apply surface-default;
+  }
+}
+
+.displayBetween {
+  @apply flex items-center justify-between;
+}
+
 .displayCenter {
   @apply flex items-center justify-center;
 }
@@ -10,10 +20,22 @@
   @apply rounded-full px-8 py-2 text-white BoldM-none surface-orange;
 }
 
+.textInput {
+  @apply rounded-full px-4 py-2 MediumS-none placeholder:italic;
+}
+
 .checkedCheckBox {
-  @apply h-5 w-5 rounded-full surface-orange;
+  @apply h-4 w-4 rounded-full surface-orange;
 }
 
 .uncheckedCheckBox {
-  @apply h-5 w-5 rounded-full border-2 border-orange-500;
+  @apply h-4 w-4 rounded-full border-[1.5px] border-orange-500;
+}
+
+.mainBox {
+  @apply rounded-100 p-4 surface-box-light;
+}
+
+.todoItem {
+  @apply rounded-full px-4 py-1 surface-box-dark;
 }
